--- a/sass/layout/_subscribe-form.scss
+++ b/sass/layout/_subscribe-form.scss
@@ -1,6 +1,4 @@
 .subscribe {
-  margin-left: auto;
-
   &__text {
     margin-bottom: 20px;
 
@@ -15,13 +13,11 @@
 }
 
 .subscribe-form {
-  display: flex;
-
   &__input {
-    margin-right: 12px;
-    padding-left: 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
+    margin-bottom: 20px;
+    padding-left: 16px;
 
     background-color: var(--footer-bg-color);
     color: var(--white-color);
@@ -45,14 +41,36 @@
     }
   }
 
-  &__button_position {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 29px;
-  }
-
   &__icon {
     width: 24px;
     height: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe-form__input {
+    width: 450px;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    margin-left: auto;
+  }
+
+  .subscribe-form {
+    display: flex;
+
+    &__input {
+      width: 358px;
+      margin-right: 12px;
+    }
+
+    &__button_position {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 29px;
+    }
   }
 }
