--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -23,11 +23,12 @@
   margin-bottom: 20px;
 
   color: var(--white-color);
-  line-height: 1.19;
+  line-height: 1.17;
 }
 
 @media screen and (min-width: 768px) {
   .header__logo {
+    margin-right: 88px;
     padding-top: 26px;
     padding-bottom: 26px;
   }
@@ -44,5 +45,9 @@
     padding-bottom: 24px;
 
     line-height: 1.2;
+  }
+
+  .footer__logo {
+    line-height: 1.19;
   }
 }
