--- a/sass/layout/_page-portfolio.scss
+++ b/sass/layout/_page-portfolio.scss
@@ -42,15 +42,8 @@
 }
 
 .examples-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-
   &__item {
-    flex-basis: calc((100% - 90px) / 3);
-    margin-left: 30px;
-    margin-top: 30px;
+    width: 100%;
   }
 
   &__link {
@@ -122,5 +115,42 @@
   .examples-list__link:focus & {
     opacity: 1;
     transform: translateY(0%);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .filter-list {
+    flex-wrap: wrap;
+    width: 362px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .examples-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+
+    &__item {
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin-left: 30px;
+      margin-top: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .examples-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+
+    &__item {
+      flex-basis: calc((100% - 3 * 30px) / 3);
+      margin-left: 30px;
+      margin-top: 30px;
+    }
   }
 }
