Добавляет мобильное меню

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "./components/button";
 @import "./components/logo";
+@import "./components/mobile-menu";
 @import "./components/modal-window";
 @import "./components/modal-form";
 
