--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
 }
 
 .section__title {
@@ -110,13 +110,25 @@ body {
 }
 
 .section-spec {
-  padding-top: 94px;
+  padding-top: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .section-spec {
+    padding-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .section {
+    padding: 94px 0;
+  }
   .section__title {
     margin-bottom: 50px;
     font-size: 36px;
+  }
+  .section-spec {
+    padding-top: 94px;
   }
 }
 
@@ -186,6 +198,117 @@ body {
   .footer__logo {
     line-height: 1.19;
   }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--white-color);
+  overflow: auto;
+  z-index: 100;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__container {
+  position: relative;
+  padding-left: 25px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mobile-menu__close-button {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: fill var(--transition-functions);
+}
+
+.mobile-menu__close-button:hover, .mobile-menu__close-button:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-menu__list {
+  margin-bottom: 302px;
+  list-style: none;
+}
+
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+
+.mobile-menu__link_current {
+  color: var(--accent-color);
+}
+
+.mobile-contacts__link {
+  display: block;
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+}
+
+.mobile-contacts__link_tel {
+  margin-bottom: 32px;
+  font-size: 34px;
+  color: var(--accent-color);
+}
+
+.mobile-contacts__link_email {
+  margin-bottom: 64px;
+  font-size: 24px;
+  color: var(--text-color);
+}
+
+.mobile-social-list {
+  display: flex;
+  list-style: none;
+}
+
+.mobile-social-list__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social-list__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.mobile-social-list__line {
+  display: inline-block;
+  width: 22px;
+  height: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
 
 .backdrop {
@@ -375,6 +498,7 @@ body {
 
 .header__container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -383,38 +507,31 @@ body {
   align-items: center;
 }
 
-@media screen and (min-width: 480px) {
-  .header__nav_icon {
+.header__mobile-menu-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+  transition: fill var(--transition-functions);
+}
+
+.header__mobile-menu-button:hover, .header__mobile-menu-button:focus {
+  fill: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: none;
+  }
+  .auth-nav {
     display: none;
   }
 }
 
-.site-nav {
-  display: none;
-}
-
-.site-nav__link_current {
-  position: relative;
-  color: var(--accent-color);
-}
-
-.site-nav__link_current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-}
-
-.auth-nav {
-  display: none;
-}
-
 @media screen and (min-width: 768px) {
+  .header__mobile-menu-button {
+    display: none;
+  }
   .site-nav {
     display: flex;
   }
@@ -434,6 +551,21 @@ body {
   .site-nav__link:hover, .site-nav__link:focus {
     color: var(--accent-color);
     outline: none;
+  }
+  .site-nav__link_current {
+    position: relative;
+    color: var(--accent-color);
+  }
+  .site-nav__link_current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
   }
   .auth-nav {
     display: block;
@@ -583,7 +715,6 @@ body {
   .features {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 60px;
     margin: -15px;
   }
   .features__item {
