--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
 
   &__title {
     margin-bottom: 30px;
@@ -11,12 +11,26 @@
 }
 
 .section-spec {
-  padding-top: 94px;
+  padding-top: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .section-spec {
+    padding-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  .section__title {
-    margin-bottom: 50px;
-    font-size: 36px;
+  .section {
+    padding: 94px 0;
+
+    &__title {
+      margin-bottom: 50px;
+      font-size: 36px;
+    }
+
+    &-spec {
+      padding-top: 94px;
+    }
   }
 }
