--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -3,6 +3,7 @@
 
   &__container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
 
@@ -10,42 +11,37 @@
     display: flex;
     align-items: center;
   }
+
+  &__mobile-menu-button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+
+    transition: fill var(--transition-functions);
+
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
+  }
 }
 
-@media screen and (min-width: 480px) {
-  .header__nav_icon {
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: none;
+  }
+
+  .auth-nav {
     display: none;
   }
 }
 
-.site-nav {
-  display: none;
-}
-
-.site-nav__link_current {
-  position: relative;
-  color: var(--accent-color);
-
-  &::after {
-    content: "";
-
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
-  }
-}
-
-.auth-nav {
-  display: none;
-}
-
 @media screen and (min-width: 768px) {
+  .header__mobile-menu-button {
+    display: none;
+  }
+
   .site-nav {
     display: flex;
 
@@ -69,6 +65,25 @@
       &:focus {
         color: var(--accent-color);
         outline: none;
+      }
+
+      &_current {
+        position: relative;
+        color: var(--accent-color);
+
+        &::after {
+          content: "";
+
+          position: absolute;
+          left: 0;
+          bottom: 0;
+
+          display: block;
+          width: 100%;
+          height: 4px;
+          background-color: var(--accent-color);
+          border-radius: 2px;
+        }
       }
     }
   }
