--- a/sass/layout/_page-footer.scss
+++ b/sass/layout/_page-footer.scss
@@ -20,7 +20,7 @@
 }
 
 .contacts-list__link {
-  color: rgba(255, 255, 255, 60%);
+  color: rgba(255, 255, 255, 0.6);
 
   font-size: 14px;
   font-style: normal;
