--- a/sass/layout/_page-portfolio.scss
+++ b/sass/layout/_page-portfolio.scss
@@ -39,10 +39,6 @@
 .examples-list {
   &__item {
     width: 100%;
-
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
   }
 
   &__link {
@@ -122,14 +118,20 @@
     flex-wrap: wrap;
     width: 362px;
 
-    &__item:nth-child(2) {
-      margin-left: 8px;
-      margin-right: 8px;
-      margin-bottom: 15px;
-    }
+    &__item {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
 
-    &__item:nth-child(4) {
-      margin-right: 8px;
+      :nth-child(2) {
+        margin-left: 8px;
+        margin-right: 8px;
+        margin-bottom: 15px;
+      }
+
+      &__item:nth-child(4) {
+        margin-right: 8px;
+      }
     }
   }
 }
@@ -154,16 +156,17 @@
       flex-basis: calc((100% - 2 * 30px) / 2);
       margin-left: 30px;
       margin-top: 30px;
-
-      // &:first-child {
-
-      //   height: 440px;
-      // }
     }
 
-    // &__description:first-child {
-    //   height: 146px;
-    // }
+    &__link {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+
+    &__description {
+      flex-grow: 1;
+    }
   }
 }
 
