--- a/sass/layout/_page-portfolio.scss
+++ b/sass/layout/_page-portfolio.scss
@@ -123,13 +123,13 @@
         margin-bottom: 30px;
       }
 
-      :nth-child(2) {
+      &:nth-child(2) {
         margin-left: 8px;
         margin-right: 8px;
         margin-bottom: 15px;
       }
 
-      &__item:nth-child(4) {
+      &:nth-child(4) {
         margin-right: 8px;
       }
     }
