--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -17,8 +17,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  max-height: 609px;
   padding: 40px;
   background-color: var(--white-color);
 
@@ -52,5 +52,12 @@
     .modal-window__close-button:focus & {
       fill: var(--accent-color);
     }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    min-width: 528px;
+    min-height: 581px;
   }
 }
