--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,7 +3,7 @@
 
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
 
@@ -11,7 +11,7 @@
 }
 
 .modal-form {
-  width: 448px;
+  width: 370px;
 
   &__label {
     display: block;
@@ -32,7 +32,7 @@
     width: 100%;
     height: 40px;
 
-    padding-left: 42px;
+    padding-left: 40px;
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -97,8 +97,8 @@
     display: block;
     margin-bottom: 30px;
 
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
 
     color: var(--text-color);
@@ -138,5 +138,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    width: 448px;
+
+    &__agree {
+      font-size: 14px;
+      line-height: 1.71;
+    }
   }
 }
