--- a/sass/layout/_page-portfolio.scss
+++ b/sass/layout/_page-portfolio.scss
@@ -2,6 +2,10 @@
   display: flex;
   margin-bottom: 40px;
 
+  &__item:not(:last-child) {
+    margin-right: 8px;
+  }
+
   &__button {
     padding: 6px 22px;
 
@@ -116,22 +120,9 @@
 @media screen and (max-width: 767px) {
   .filter-list {
     flex-wrap: wrap;
-    width: 362px;
 
-    &__item {
-      &:not(:last-child) {
-        margin-bottom: 30px;
-      }
-
-      &:nth-child(2) {
-        margin-left: 8px;
-        margin-right: 8px;
-        margin-bottom: 15px;
-      }
-
-      &:nth-child(4) {
-        margin-right: 8px;
-      }
+    &__item:nth-child(-n + 3) {
+      margin-bottom: 15px;
     }
   }
 
